--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <!-- IMAGEM -->
     <img src="imagem mcqueen.png" class="mcqueen" alt="Relâmpago McQueen">
 
+    <div id="instrucao" class="instrucao">
+      👇 Escolha uma aba acima para começar!
+    </div>
 
     <!-- ABAS -->
     <section id="historia" class="aba ativa">
@@ -72,5 +75,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
