--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <h1>Relâmpago McQueen</h1>
     <p class="sub">"KA-CHOW!" – O carro mais veloz e estiloso da Pixar!</p>
     
-    <div id="instrucao" class="instrucao">
-      👇 Escolha uma aba acima para começar!
-    </div>
+
 
     <!-- MENU DE ABAS -->
     <nav>
@@ -31,7 +29,10 @@
     <!-- IMAGEM -->
     <img src="imagem mcqueen.png" class="mcqueen" alt="Relâmpago McQueen">
 
-
+    <div id="instrucao" class="instrucao">
+      Escolha uma aba acima para começar!
+    </div>
+    
     <!-- ABAS -->
     <section id="historia" class="aba ativa">
       <h2>História do Relâmpago McQueen</h2>
@@ -76,6 +77,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
