--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     
     <!-- ABAS -->
-    <section id="historia" class="aba ativa">
+    <section id="historia" class="aba">
       <h2>História do Relâmpago McQueen</h2>
       <p>
         Relâmpago McQueen começou sua carreira como um carro de corrida jovem,
@@ -77,6 +77,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
