--- a/index.html
+++ b/index.html
@@ -2,22 +2,19 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Relâmpago McQueen ⚡</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Rubik+Mono+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Relâmpago McQueen ⚡</title>
+
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Rubik+Mono+One&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <img src="logo95.png.png" alt="Logo Relâmpago McQueen" class="logo">
+    <img src="logo95.png" alt="Logo Relâmpago McQueen" class="logo">
     <h1>Relâmpago McQueen</h1>
     <p class="sub">"KA-CHOW!" – O carro mais veloz e estiloso da Pixar!</p>
-    
 
-
-    <!-- MENU DE ABAS -->
     <nav>
       <button class="aba-btn" data-aba="historia">História</button>
       <button class="aba-btn" data-aba="caracteristicas">Características</button>
@@ -26,23 +23,25 @@
   </header>
 
   <main>
-    <!-- IMAGEM -->
-    <img src="imagem mcqueen.png" class="mcqueen" alt="Relâmpago McQueen">
 
+    <!-- INSTRUÇÃO INICIAL -->
     <div id="instrucao" class="instrucao">
       Escolha uma aba acima para começar!
     </div>
-    
+
+    <!-- IMAGEM -->
+    <img src="imagem-mcqueen.png" class="mcqueen" alt="Relâmpago McQueen">
+
     <!-- ABAS -->
     <section id="historia" class="aba">
       <h2>História do Relâmpago McQueen</h2>
       <p>
         Relâmpago McQueen começou sua carreira como um carro de corrida jovem,
-        impulsivo e cheio de confiança. Durante sua jornada, aprendeu sobre amizade,
+        impulsivo e cheio de confiança. Durante sua jornada aprendeu sobre amizade,
         humildade e que vencer nem sempre é o mais importante.
       </p>
       <p>
-        Em Radiator Springs, McQueen encontrou novos amigos como Mate, Sally e Doc Hudson,
+        Em Radiator Springs, McQueen encontrou amigos como Mate, Sally e Doc Hudson,
         que mudaram completamente sua visão de mundo.
       </p>
     </section>
@@ -58,9 +57,9 @@
     <section id="curiosidades" class="aba">
       <h2>Curiosidades</h2>
       <p>⚡ “Ka-chow!” é seu bordão oficial.</p>
-      <p>🏁 É inspirado em carros NASCAR reais.</p>
-      <p>🎬 Seu nome é uma homenagem ao ator Steve McQueen.</p>
-      <p>🚗 No primeiro filme, ele aprende mais em Radiator Springs do que nas pistas.</p>
+      <p>🏁 Inspirado em carros reais da NASCAR.</p>
+      <p>🎬 Nome homenageia o ator Steve McQueen.</p>
+      <p>🚗 McQueen evolui pessoalmente ao longo da série.</p>
     </section>
 
     <section class="interacao">
@@ -74,12 +73,6 @@
     <p>Site criado por Gabriel Viana INF21 🏁</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
-
-
-
-
-
-
