--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <main class="container">
     <!-- imagem animada McQueen -->
     <div class="hero-wrap">
-      <img src="imagem_mcqueen.png" alt="Relâmpago McQueen" class="mcqueen" id="mcqueenAnim">
+      <img src="imagem mcqueen.png" alt="Relâmpago McQueen" class="mcqueen" id="mcqueenAnim">
     </div>
 
     <!-- SEÇÕES/ABAS -->
@@ -120,3 +120,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
