--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <header class="site-header">
     <div class="header-row">
       <!-- Logo: caminho do upload -->
-      <img id="logo95" class="logo" src='/mnt/data/A_2D_digital_graphic_design_features_the_number_"9.png' alt="Logo 95">
+      <img src="logo95.png.png" class="logo95">
+
 
       <div class="title-area">
         <h1 class="site-title">Relâmpago McQueen</h1>
@@ -120,4 +121,5 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
