--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="site-header">
     <div class="header-row">
       <!-- Logo: caminho do upload -->
-      <img src="logo95.png.png" class="logotipo">
+      <img src="logo95.png.png" class="logo">
 
 
       <div class="title-area">
@@ -121,6 +121,7 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
